adding images to document

--- a/docs/5. LOGGING_WITH_ELK_STACK.md
+++ b/docs/5. LOGGING_WITH_ELK_STACK.md
@@ -8,6 +8,11 @@ We will deploy the logging stack in a `logging` namespace and expose Kibana thro
 
 ## 1. Architecture Overview
 
+<div align="center">
+  <img src="../images/elk_stack.png" alt="ELK Architecture Overview" width="800">
+  <p><em>ELK Architecture Overview</em></p>
+</div>
+
 Our logging architecture consists of:
 - **Elasticsearch** - Distributed search and analytics engine for storing logsDaniel
 - **Filebeat** - Lightweight log shipper deployed as DaemonSet on all nodes
