--- a/docs/6. MONITORING.md
+++ b/docs/6. MONITORING.md
@@ -267,8 +267,8 @@ Get the current service monitors in monitoring
 kubectl -n monitoring get servicemonitors
 ```
 
-What the ServiceMonitor actually does
-1. It describes, in Kubernetes-native form, how Prometheus should reach your service:
+1. What the ServiceMonitor actually does
+It describes, in Kubernetes-native form, how Prometheus should reach your service:
 - Which namespace(s) to look in (namespaceSelector).
 - Which Service(s) to target (selector.matchLabels).
 - On which port/path/interval to scrape (endpoints).
@@ -280,7 +280,7 @@ The Prometheus Operator watches for ServiceMonitor objects that carry the label 
 - kube-proxy forwards the request to whichever pod(s) are behind the Service, so you get metrics even while pods scale, roll, or get rescheduled.
 
 
-Cheat-sheet for reading PromQL
+# Cheat-sheet for reading PromQL
 - Selector {job="hand-gesture-servicemonitor"} limits the query to the series produced by your ServiceMonitor.
 - rate(metric[5m]) converts a monotonically increasing counter into a per-second rate, averaged over the sliding window inside [...].
 - sum( … ) collapses multiple time-series into one by adding them.
