--- a/docs/7. TRACING_WITH_JAEGER.md
+++ b/docs/7. TRACING_WITH_JAEGER.md
@@ -152,22 +152,10 @@ What it does:
 
 ### Visual Architecture
 
-```
-┌─────────────────┐    ┌─────────────────┐    ┌─────────────────┐
-│   Your FastAPI  │───▶│  Jaeger Agent   │───▶│ Jaeger Collector│
-│   Application   │    │  (Local Proxy)  │    │ (Data Processor)│
-│   Port: 8000    │    │  Port: 6831     │    │  Port: 4317     │
-│                 │    │  (UDP Thrift)   │    │  (OTLP gRPC)    │
-└─────────────────┘    └─────────────────┘    └─────────────────┘
-                                                        │
-                                                        ▼
-┌─────────────────┐    ┌─────────────────┐    ┌─────────────────┐
-│     Users       │───▶│  Jaeger Query   │───▶│  Storage Backend│
-│ (Jaeger UI)     │    │   (Search API)  │    │ (Memory/ES/etc) │
-│ Port: 80/443    │    │  Port: 16686    │    │                 │
-│ (via Ingress)   │    │                 │    │                 │
-└─────────────────┘    └─────────────────┘    └─────────────────┘
-```
+<div align="center">
+  <img src="../images/jaeger.png" alt="Jaeger Architecture Overview" width="800">
+  <p><em>Jaeger Architecture Overview</em></p>
+</div>
 
 ### Implementation Architecture
 
@@ -229,6 +217,7 @@ What it does:
 │  • Internal: http://jaeger-query:16686                          │
 └─────────────────────────────────────────────────────────────────┘
 ```
+
 ## Key terms 
 
 1. **What is JaegerExporter?**
