update setup elk and setup jaeger to correctly install helm charts

--- a/docs/7. TRACING_WITH_JAEGER.md
+++ b/docs/7. TRACING_WITH_JAEGER.md
@@ -280,20 +280,37 @@ Our deployment requires:
 - Kubernetes cluster with NGINX Ingress
 - Existing Elasticsearch cluster (from our ELK stack)
 - Helm 3.x installed
+- kubectl and helm commands available
 
-### Step 1: Prepare Elasticsearch Access
+### Automated Setup with Our Script
 
-Copy Elasticsearch credentials to our tracing namespace:
+We've created a comprehensive setup script that handles the entire deployment process:
 
 ```bash
-# Copy credentials from logging to tracing namespace
-kubectl get secret elasticsearch-master-credentials -n logging -o yaml | \
-  sed 's/namespace: logging/namespace: tracing/' | \
-  kubectl apply -f -
+# Show available options
+./scripts/setup-jaeger.sh help
+
+# Install Jaeger stack (recommended)
+./scripts/setup-jaeger.sh install
+
+# Clean up existing installation
+./scripts/setup-jaeger.sh cleanup
+
+# Reinstall (cleanup + install)
+./scripts/setup-jaeger.sh reinstall
+
+# Verify installation
+./scripts/setup-jaeger.sh verify
+
+# Show connection information
+./scripts/setup-jaeger.sh info
 ```
 
-### Step 2: Deploy Jaeger
+### Manual Step-by-Step Deployment
 
+If you prefer manual deployment, here are the individual steps our script performs:
+
+**Step 1: Setup Prerequisites**
 ```bash
 # Add Jaeger Helm repository
 helm repo add jaegertracing https://jaegertracing.github.io/helm-charts
@@ -301,15 +318,38 @@ helm repo update
 
 # Create tracing namespace
 kubectl create namespace tracing
+```
 
+**Step 2: Copy Elasticsearch Credentials**
+```bash
+# Copy credentials from logging to tracing namespace
+kubectl get secret elasticsearch-master-credentials -n logging -o yaml | \
+  sed 's/namespace: logging/namespace: tracing/' | \
+  sed '/resourceVersion:/d' | \
+  sed '/uid:/d' | \
+  sed '/creationTimestamp:/d' | \
+  kubectl apply -f -
+
+# Copy certificates for TLS connection
+kubectl get secret elasticsearch-master-certs -n logging -o yaml | \
+  sed 's/namespace: logging/namespace: tracing/' | \
+  sed '/resourceVersion:/d' | \
+  sed '/uid:/d' | \
+  sed '/creationTimestamp:/d' | \
+  kubectl apply -f -
+```
+
+**Step 3: Deploy Jaeger**
+```bash
 # Deploy Jaeger with our configuration
 helm upgrade --install jaeger jaegertracing/jaeger \
   --namespace tracing \
-  --values helm-charts/jaeger/values.yaml
+  --values helm-charts/jaeger/values.yaml \
+  --timeout 10m \
+  --wait
 ```
 
-### Step 3: Verify Deployment
-
+**Step 4: Verify Deployment**
 ```bash
 # Check all pods are running
 kubectl get pods -n tracing
@@ -320,13 +360,15 @@ kubectl get svc -n tracing
 # Check ingress
 kubectl get ingress -n tracing
 
-# Verify Elasticsearch connectivity
-kubectl exec -n tracing deployment/jaeger-collector -- \
-  curl -X GET "http://elasticsearch-master.logging.svc.cluster.local:9200/_cluster/health?pretty"
+# Verify Elasticsearch connectivity (DNS resolution)
+kubectl exec -n tracing deployment/jaeger -- \
+  nslookup elasticsearch-master.logging.svc.cluster.local
+
+# Check Jaeger logs for Elasticsearch connection
+kubectl logs -n tracing deployment/jaeger --tail=100 | grep -i elasticsearch
 ```
 
-### Step 4: Test Application Tracing
-
+**Step 5: Test Application Tracing**
 ```bash
 # Generate test traces
 for i in {1..5}; do 
@@ -345,8 +387,20 @@ curl -s "http://jaeger.34.63.222.25.nip.io/api/services" | jq .
 
 ### Accessing Our Jaeger UI
 
-**Production**: http://jaeger.34.63.222.25.nip.io
-**Development**: `kubectl port-forward -n tracing svc/jaeger-query 16686:16686`
+```bash
+# Get connection information
+./scripts/setup-jaeger.sh info
+
+# Get Jaeger UI URL automatically
+JAEGER_HOST=$(kubectl get ingress -n tracing -o jsonpath='{.items[0].spec.rules[0].host}')
+echo "Jaeger UI: http://$JAEGER_HOST"
+
+# Port forward for local access (if ingress not available)
+kubectl port-forward -n tracing svc/jaeger-query 16686:16686
+# Then access: http://localhost:16686
+```
+
+**Production URL**: http://jaeger.34.63.222.25.nip.io
 
 ### Understanding the Jaeger UI
 
@@ -404,30 +458,47 @@ curl -X GET "localhost:9200/jaeger-span-*/_search?pretty" \
 
 **Debug steps:**
 ```bash
+# Use our verification script first
+./scripts/setup-jaeger.sh verify
+
 # Check if our app is sending traces
 kubectl logs -n model-serving deployment/hand-gesture-deployment | grep -i trace
 
-# Check Jaeger collector logs
-kubectl logs -n tracing deployment/jaeger-collector
+# Check Jaeger logs (all-in-one deployment)
+kubectl logs -n tracing deployment/jaeger
 
-# Verify collector is receiving spans
-kubectl port-forward -n tracing deployment/jaeger-collector 14269:14269
-curl -s http://localhost:14269/metrics | grep jaeger_collector_spans_received_total
+# Verify Jaeger is receiving spans
+kubectl port-forward -n tracing deployment/jaeger 14269:14269 &
+curl -s http://localhost:14269/metrics | grep jaeger
+
+# Test Jaeger UI directly
+JAEGER_HOST=$(kubectl get ingress -n tracing -o jsonpath='{.items[0].spec.rules[0].host}')
+curl -s "http://$JAEGER_HOST/api/services"
 ```
 
 #### 2. Elasticsearch connection issues
 
 **Debug steps:**
 ```bash
-# Test connectivity from Jaeger
-kubectl exec -n tracing deployment/jaeger-collector -- \
-  curl -X GET "http://elasticsearch-master.logging.svc.cluster.local:9200/_cluster/health"
+# Test DNS resolution from Jaeger
+kubectl exec -n tracing deployment/jaeger -- \
+  nslookup elasticsearch-master.logging.svc.cluster.local
 
-# Check Elasticsearch credentials
-kubectl get secret elasticsearch-master-credentials -n tracing -o yaml
+# Check Jaeger logs for Elasticsearch connection
+kubectl logs -n tracing deployment/jaeger --tail=100 | grep -i elasticsearch
+
+# Check if both secrets exist in tracing namespace
+kubectl get secret elasticsearch-master-credentials -n tracing
+kubectl get secret elasticsearch-master-certs -n tracing
 
 # Verify Elasticsearch is healthy
 kubectl get pods -n logging -l app=elasticsearch-master
+
+# Test Elasticsearch directly
+kubectl port-forward -n logging svc/elasticsearch-master 9200:9200 &
+USERNAME=$(kubectl get secret elasticsearch-master-credentials -n logging -o jsonpath='{.data.username}' | base64 --decode)
+PASSWORD=$(kubectl get secret elasticsearch-master-credentials -n logging -o jsonpath='{.data.password}' | base64 --decode)
+curl -u "$USERNAME:$PASSWORD" -X GET "localhost:9200/_cluster/health"
 ```
 
 #### 3. High application latency
@@ -445,22 +516,50 @@ span_processor = BatchSpanProcessor(
 
 ### Essential Debugging Commands
 
-```bash
-# Check Jaeger collector metrics
-kubectl port-forward -n tracing deployment/jaeger-collector 14269:14269
+Our setup script provides automated verification, but here are the individual debugging commands:
 
-curl -s http://localhost:14269/metrics | grep -E "(spans_received|spans_saved)"
+```bash
+# Use our verification script (recommended)
+./scripts/setup-jaeger.sh verify
+
+# Manual debugging commands:
+
+# Check Jaeger deployment status
+kubectl get pods -n tracing
+kubectl get svc -n tracing
+kubectl get ingress -n tracing
+
+# Check Jaeger metrics endpoint
+kubectl port-forward -n tracing deployment/jaeger 14269:14269 &
+curl -s http://localhost:14269/metrics | grep -E "jaeger"
+
+# Test Jaeger UI accessibility
+JAEGER_HOST=$(kubectl get ingress -n tracing -o jsonpath='{.items[0].spec.rules[0].host}')
+curl -s "http://$JAEGER_HOST/api/services"
+
+# Verify Elasticsearch connectivity from Jaeger
+kubectl exec -n tracing deployment/jaeger -- \
+  nslookup elasticsearch-master.logging.svc.cluster.local
+
+# Check Jaeger logs for Elasticsearch connection
+kubectl logs -n tracing deployment/jaeger --tail=100 | grep -i elasticsearch
 
 # Check Elasticsearch cluster health
-kubectl port-forward -n logging svc/elasticsearch-master 9200:9200
-curl -X GET "localhost:9200/_cluster/health?pretty"
+kubectl port-forward -n logging svc/elasticsearch-master 9200:9200 &
+USERNAME=$(kubectl get secret elasticsearch-master-credentials -n logging -o jsonpath='{.data.username}' | base64 --decode)
+PASSWORD=$(kubectl get secret elasticsearch-master-credentials -n logging -o jsonpath='{.data.password}' | base64 --decode)
+curl -u "$USERNAME:$PASSWORD" -X GET "localhost:9200/_cluster/health?pretty"
 
 # List all Jaeger indices
-curl -X GET "localhost:9200/_cat/indices/jaeger*?v"
+curl -u "$USERNAME:$PASSWORD" -X GET "localhost:9200/_cat/indices/jaeger*?v"
 
 # Check application tracing status
 kubectl exec -n model-serving deployment/hand-gesture-deployment -- \
   env | grep -E "(ENABLE_TRACING|JAEGER_COLLECTOR_HOST)"
+
+# Check if secrets exist in tracing namespace
+kubectl get secret elasticsearch-master-credentials -n tracing
+kubectl get secret elasticsearch-master-certs -n tracing
 ```
 
 ---
