finish setup script for prometheus

--- a/docs/6. MONITORING.md
+++ b/docs/6. MONITORING.md
@@ -26,24 +26,63 @@ Our monitoring stack uses the **kube-prometheus-stack** Helm chart for:
 
 ### 2.2 Deployment Steps
 
-```bash
-# 1. Create namespace
-kubectl create namespace monitoring
+#### Automated Setup with Our Script
 
-# 2. Add Helm repository
+We've created a comprehensive setup script that handles the entire deployment process:
+
+```bash
+# Show available options
+./scripts/setup-prometheus.sh help
+
+# Install Prometheus stack (recommended)
+./scripts/setup-prometheus.sh install
+
+# Clean up existing installation
+./scripts/setup-prometheus.sh cleanup
+
+# Reinstall (cleanup + install)
+./scripts/setup-prometheus.sh reinstall
+
+# Verify installation
+./scripts/setup-prometheus.sh verify
+
+# Show connection information
+./scripts/setup-prometheus.sh info
+```
+
+#### Manual Step-by-Step Deployment
+
+If you prefer manual deployment, here are the individual steps our script performs:
+
+```bash
+# 1. Add Helm repository
 helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
 helm repo update
 
+# 2. Create namespace
+kubectl create namespace monitoring
+
 # 3. Deploy stack
-helm install prometheus-stack prometheus-community/kube-prometheus-stack \
+helm upgrade --install prometheus prometheus-community/kube-prometheus-stack \
   --namespace monitoring \
   --values helm-charts/prometheus/values.yml \
-  --create-namespace
+  --timeout 10m \
+  --wait
 
 # 4. Verify deployment
 kubectl get pods,svc,ingress -n monitoring
 
-### Uninstall Monitoring Stack + delete monitoring
+# 5. Get Grafana credentials
+kubectl get secret prometheus-grafana -n monitoring -o jsonpath='{.data.admin-password}' | base64 --decode; echo
+```
+
+#### Cleanup Commands
+
+```bash
+# Using our script (recommended)
+./scripts/setup-prometheus.sh cleanup
+
+# Manual cleanup
 helm uninstall prometheus -n monitoring
 kubectl delete namespace monitoring
 ```
@@ -177,15 +216,31 @@ coreDns:
 ### Verification Commands
 
 ```bash
+# Use our verification script (recommended)
+./scripts/setup-prometheus.sh verify
+
+# Manual verification commands:
+
 # Check ServiceMonitors
 kubectl get servicemonitors -A
 
+# Check PrometheusRules
+kubectl get prometheusrules -A
+
 # Verify scraping targets in Prometheus UI
-kubectl -n monitoring port-forward svc/prometheus-stack-prometheus 9090:9090
+kubectl port-forward -n monitoring svc/prometheus-kube-prometheus-prometheus 9090:9090
 # Visit http://localhost:9090/targets
 
 # Test if our app is being scraped
 up{job="<app-name>-servicemonitor"}
+
+# Check Grafana health
+kubectl port-forward -n monitoring svc/prometheus-grafana 3000:80
+curl -s "http://localhost:3000/api/health"
+
+# Check Alertmanager status
+kubectl port-forward -n monitoring svc/prometheus-kube-prometheus-alertmanager 9093:9093
+curl -s "http://localhost:9093/api/v2/status"
 ```
 
 ---
@@ -193,15 +248,23 @@ up{job="<app-name>-servicemonitor"}
 ## 4. Access URLs
 
 ```bash
-# Get current admin password
+# Get connection information (recommended)
+./scripts/setup-prometheus.sh info
+
+# Get Grafana admin password manually
 kubectl get secret prometheus-grafana -n monitoring -o jsonpath="{.data.admin-password}" | base64 --decode; echo
+
+# Port forward for local access
+kubectl port-forward -n monitoring svc/prometheus-grafana 3000:80
+kubectl port-forward -n monitoring svc/prometheus-kube-prometheus-prometheus 9090:9090
+kubectl port-forward -n monitoring svc/prometheus-kube-prometheus-alertmanager 9093:9093
 ```
 
 Our monitoring stack is accessible via:
 
-- **Grafana**: https://grafana.34.63.222.25.nip.io (admin/prom-operator)
-- **Prometheus**: https://prometheus.34.63.222.25.nip.io
-- **Alertmanager**: https://alertmanager.34.63.222.25.nip.io
+- **Grafana**: http://grafana.34.63.222.25.nip.io (admin/[password from script])
+- **Prometheus**: http://prometheus.34.63.222.25.nip.io
+- **Alertmanager**: http://alertmanager.34.63.222.25.nip.io
 
 ---
 
